--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 rust-version = "1.80"
 
 [dependencies]
-anyhow = "1.0.68"                                    # error handling
-bytes = "1.3.0"                                      # helps manage buffers
+# anyhow = "1.0.68"                                    # error handling
+# bytes = "1.3.0"                                      # helps manage buffers
 clap = { version = "4.5.19", features = ["derive"] }
 flate2 = "1.0.34"
-thiserror = "1.0.38"                                 # error handling
+hex-literal = "=0.3.4"
+sha1 = "0.10.6"
+# thiserror = "1.0.38"                                 # error handling
