--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ clap = { version = "4.5.19", features = ["derive"] }
 flate2 = "1.0.34"
 hex = "0.4.3"
 sha1 = "0.10.6"
+walkdir = "2.5.0"
 # thiserror = "1.0.38"                                 # error handling
